JSA - Correcciones en general

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_Pedidos.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_Pedidos.cshtml
@@ -33,6 +33,7 @@
         settings.Columns.Add("Cantidad", "Cantidad");
         settings.Columns.Add("EstatusPedido", "Estatus");
         settings.Columns.Add("FechaRegistroPedido", "Fecha de Pedido");
+        settings.Columns.Add("Unidad", "Unidad asignada");
 
         settings.Columns.Add(c =>
         {
