--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Egreso/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Egreso/Index.cshtml
@@ -145,7 +145,7 @@
 
                                         </div>
                                         <div class="col-md-4">
-                                            <b>Centro de Costo</b>
+                                            <b>Cuenta Contable</b>
                                             <div class="form-group">
                                                 @Html.DevExpress().ComboBox(settings =>
                                                {
