--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXPuntoVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/InventarioXPuntoVenta.cshtml
@@ -3,7 +3,6 @@
 @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
-        new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "Material" }
     )
 @Html.DevExpress().GetScripts(
@@ -18,11 +17,36 @@
     if (mensaje != '') {
         $(window).on("load", showNotification('alert-success', mensaje, 'top', 'center', '', ''));
     }
-    function selectAll() {
-        $('ul li').each(function (i) {
-            $(this).attr('rel'); // This is your rel value
+    //function selectAll() {
+    //    $('ul li').each(function (i) {
+    //        $(this).attr('rel'); 
+    //    });
+    //}
+    function toggleChecked(status) {
+        $("#checkboxes input").each(function () {           
+            $(this).prop("checked", status);
         });
     }
+    function toggleCheckedPipa(status) {
+        $("#checkboxespipa input").each(function () {
+            $(this).prop("checked", status);
+        });
+    }
+    $(document).ready(function () {
+        var checkAllBox = $("#checkall");
+        checkAllBox.prop('checked', true);
+        checkAllBox.click(function () {
+            var status = checkAllBox.prop('checked');
+            toggleChecked(status);
+        });
+        var checkAllBoxPipa = $("#checkallpipa");
+        checkAllBoxPipa.prop('checked', true);
+        checkAllBoxPipa.click(function () {
+            var status = checkAllBoxPipa.prop('checked');
+            toggleCheckedPipa(status);
+        });
+    });
+    
 </script>
 <body>
     <div class="page-loader-wrapper">
@@ -64,18 +88,19 @@
                                     </div>
                                 </div>
                                 <div class="col-md-3">
-                                    <strong>Estaciones</strong>
-                                    <div class="form-group">
+                                    <strong>Pipas</strong>
+                                    <div class="form-group" id="checkboxespipa">
                                         <ul>
-                                            @*<li style="list-style:none" onclick="selectAll()" > Seleccionar todo</li>*@
+                                            <li style="list-style:none"><input type="checkbox" value="false" class="checkbox" style="width: 20px; height: 20px;" id="checkallpipa" />Todos </li>
                                             @Html.EditorFor(m => m.Pipas)
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <strong>Estaciones</strong>
-                                    <div class="form-group">
+                                    <div class="form-group" id="checkboxes">
                                         <ul>
+                                            <li style="list-style:none"><input type="checkbox" value="false" class="checkbox" style="width: 20px; height: 20px;" id="checkall" />Todos</li>
                                             @Html.EditorFor(m => m.Estaciones)
                                         </ul>
                                     </div>
