--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -280,10 +280,10 @@
                                     {
                                     <li>@Html.ActionLink("Gaseras", "Index", "Empresas")</li>
                                     }
-                                    @if (rol.CatEgresos)
-                                    {
+                                    @*@if (rol.CatEgresos)
+                                    {*@
                                     <li>@Html.ActionLink("Egresos", "Index", "Egreso")</li>
-                                    }
+                                    @*}*@
                                     @if (rol.CatUsuarios)
                                     {
                                     <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
